[package]
name = "a0"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "generate structs and their values from external data"

[lib]
name = "a0"
path = "macro.rs"
proc-macro = true

[dependencies]
toml = "0.8.19"
quote = "1.0.37"
serde_yaml = "0.9.34"
proc-macro2 = "1.0.86"
serde_json = "1.0.128"
syn = { version = "2.0.79", features = ["full"] }
